plugins {
    id 'java'
    id 'application'
    id 'maven'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}


sourceCompatibility = 1.11

repositories {
    mavenCentral()
    jcenter()
}

def currentOS = org.gradle.internal.os.OperatingSystem.current()
def platform
if (currentOS.isWindows()) {
    platform = 'win'
} else if (currentOS.isLinux()) {
    platform = 'linux'
} else if (currentOS.isMacOsX()) {
    platform = 'mac'
}



dependencies {

    testImplementation("junit:junit:4.12")
    testRuntime("org.junit.vintage:junit-vintage-engine:5.4.0")


    compile "org.openjfx:javafx-base:11:${platform}"
    compile "org.openjfx:javafx-graphics:11:${platform}"
    compile "org.openjfx:javafx-controls:11:${platform}"
    compile "org.openjfx:javafx-fxml:11:${platform}"
}


sourceSets {
    intTest {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

configurations {
    intTestImplementation.extendsFrom implementation
    intTestRuntimeOnly.extendsFrom runtimeOnly
}

test {
    useJUnit()
    maxHeapSize = '1G'
}


mainClassName = 'Main'

jar {
    manifest {
        attributes 'Main-Class': 'Main'
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}


wrapper {
    gradleVersion = '5.2.1'
    distributionUrl = distributionUrl.replace("bin", "all")
}



